# Mu3e-toy-MC-and-anylise-stuf

./: 3LayerMonteCarlo.cu  3LayerMonteCarlo_Reference.cu  Analyse polarisation from fake  AnalysePolarisationFromFake.cpp  AverageCostheta.h  CMakeLists.txt  GPULayer3Acceptance.cu  HardMEGWay.cpp  MichelPolarizationTheoryEventscopy.cpp  MontecarloAFBvsx.cpp  MontecarloGPU.cu  README.md  Theoryfit.cpp  VariancetestGPU.cu  VariancetestGPU_root  VariancetestGPU_root.cpp  reference_cos.cpp
